
2019-06-29  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l (ppinput): check for conflict markers (similar to GCC)

2019-06-28  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l (ppcopy): ensure to have original errno, not the one from
	  one of the files in search path
	* pplex.l (ppcopy) [_WIN32]: fixed EINVAL for path argument access doesn't
	  allow mixed slashes or anything before a partition identifier
	* parser.y: extracted program_init_without_program_id
	* parser.y: moved _options_paragraph references into _program_body

2019-06-23  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c, codegen.c, pplex.l, ppparse.y, reserved.c, scanner.l, tree.c,
	  typeck.c: fixed possible arithmetic overflow

2019-06-08  Simon Sobisch <simonsobisch@gnu.org>

	* config.def, parser.y: removed compiler support options cb_json_generate
	  and cb_xml_generate, as soon as those words are reserved we take those
	  statements as supported

2019-06-07  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (get_prev_ml_tree_entry): fixed null-pointer access with code
	  similar to use in other places
	* tree.c, tree.h: added struct cb_next_elem to be used for any structure
	  that has a next pointer as first entry, to be used by (cb_next_length)
	  to get the size of the complete entry (only reasonable to call with the
	  "main" entry normally attached to a program)
	* typeck.c (cb_validate_program_data): set alphabet->custom_list to error
	  node once seen as bad, partially limitted variable scope
	* tree.c (validate_file): explicit check for number of keys (limited
	  to MAX_FILE_KEYS, currently 255, per file)

2019-06-06  Simon Sobisch <simonsobisch@gnu.org>

	* help.c: new file, extracted from cobc.c to limit the generation of docs
	  to actual changes in the help output; also separated help parts into one
	  function per help section
	* Makefile.am, cobc.c, cobc.h: adjustments for help.c

2019-06-02  Simon Sobisch <simonsobisch@gnu.org>
